Fixed dark mode body size change

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -47,7 +47,7 @@ body.dark-theme .modal-header {
 
 body.dark-theme {
     color: #c3c3c3;
-    background-color: #282828;
+    background-color: #1e1e1e;
     transition: ease .3s;
 }
 
@@ -55,55 +55,55 @@ body.dark-theme {
         background-color: #121212;
     }
 
-    body.dark-theme .modal-content, body.dark-theme {
+    body.dark-theme .modal-content {
         background-color: #1e1e1e;
         border: 1px solid #000;
     }
 
-        body.dark-theme h2 {
-            color: #c3c3c3;
-        }
+    body.dark-theme h2 {
+        color: #c3c3c3;
+    }
 
-        body.dark-theme a, body.dark-theme .btn-link {
-            color: #5297ff;
-            transition: ease .3s;
-        }
+    body.dark-theme a, body.dark-theme .btn-link {
+        color: #5297ff;
+        transition: ease .3s;
+    }
 
-        body.dark-theme .sidebar {
-            background-image: linear-gradient(#c06c84, #6C5B7B, #355C7D);
-            transition: ease .3s;
-        }
+    body.dark-theme .sidebar {
+        background-image: linear-gradient(#c06c84, #6C5B7B, #355C7D);
+        transition: ease .3s;
+    }
 
-        body.dark-theme .btn-block {
+    body.dark-theme .btn-block {
+        display: block;
+        width: 100%;
+        color: #c3c3c3;
+        background: #454545;
+        border: 1px solid #000;
+        -webkit-appearance: none;
+    }
+
+        body.dark-theme .btn-block:hover {
             display: block;
             width: 100%;
-            color: #c3c3c3;
-            background: #454545;
+            color: #939393;
+            background: #313131;
             border: 1px solid #000;
             -webkit-appearance: none;
         }
 
-            body.dark-theme .btn-block:hover {
-                display: block;
-                width: 100%;
-                color: #939393;
-                background: #313131;
-                border: 1px solid #000;
-                -webkit-appearance: none;
-            }
-
-            body.dark-theme .btn-block:focus {
-                border: 1px solid #000;
-                -webkit-appearance: none;
-            }
-
-        body.dark-theme button:focus {
-            outline: none;
+        body.dark-theme .btn-block:focus {
+            border: 1px solid #000;
+            -webkit-appearance: none;
         }
 
-        body.dark-theme hr {
-            border-top: 1px solid rgb(255 255 255 / 10%);
-        }
+    body.dark-theme button:focus {
+        outline: none;
+    }
+
+    body.dark-theme hr {
+        border-top: 1px solid rgb(255 255 255 / 10%);
+    }
 /*dark-theme end*/
 
 /* scrollbar dark theme */
